--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Another high-level API for creating secondary leveldb indexes",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "run-s test:*",
+    "test:deps": "dependency-check ./package.json",
+    "test:lint": "standard | snazzy",
+    "test:tape": "tape test/* | tap-format-spec"
   },
   "repository": {
     "type": "git",
@@ -25,6 +28,20 @@
   },
   "homepage": "https://github.com/hypermodules/level-idx#readme",
   "dependencies": {
-    "deep-access": "^0.1.1"
+    "bytewise": "^1.1.0",
+    "deep-access": "^0.1.1",
+    "subleveldown": "^2.1.0"
+  },
+  "devDependencies": {
+    "@tap-format/spec": "^0.2.0",
+    "bytewise": "^1.1.0",
+    "dependency-check": "^2.7.0",
+    "memdb": "^1.3.1",
+    "memdown": "^1.2.4",
+    "npm-run-all": "^4.0.0",
+    "snazzy": "^5.0.0",
+    "standard": "^8.6.0",
+    "subleveldown": "^2.1.0",
+    "tape": "^4.6.3"
   }
 }
